# nightshade

./: .gitattributes  .gitignore  LICENSE.md  README.md  pyproject.toml
data/: full_asset2.pkl  precompute_mapping.json  target_concepts.json  target_concepts_embs.safetensors
scripts/: decrypt_pickle.py  dump_asset.py  fingerprint.py
src/nightshade/: __init__.py  cli.py  downloader.py  nightshade.py  opt.py  utils.py
